--- a/options.html
+++ b/options.html
@@ -48,7 +48,7 @@
 			<li><a href="#nge" class="" id="nge">Changes</a></li>
 			<li><a href="#sup" class="" id="sup">Support</a></li>
 			<li><a href="#abo" class="" id="abo">About</a></li>
-			<li><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&amp;hosted_button_id=C5GNE665F894E" class="" id="don" target="_blank">Donate</a></li>
+			<li><a href="https://www.paypal.me/LevD" class="" id="don" target="_blank">Donate</a></li>
 		</ul>
 		<!-- END NAVIGATION -->
 	</div>
@@ -593,9 +593,9 @@
 		<section>
 			<h3>Donate</h3>
 			<div>
-				<p>This is a personal project and I am a full-time student, please <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4RVCM5TZRYBK8">support me by donating</a> so I can keep Minimalist for Google Calendar up to date and competitive.</p>
+				<p>This is a personal project, please <a href="https://www.paypal.me/LevD">support me by donating</a> so I can keep Minimalist for Google Calendar up to date and competitive.</p>
 				<br />
-				<a class="button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=C5GNE665F894E" target="_blank">Donate</a>
+				<a class="button" href="https://www.paypal.me/LevD" target="_blank">Donate</a>
 			</div>
 		</section>
 		<section>
@@ -635,9 +635,9 @@
 		<section>
 			<h3>Donate</h3>
 			<div>
-				<p>This is a personal project and I am a full-time student, please <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4RVCM5TZRYBK8">support me by donating</a> so I can keep Minimalist for Google Calendar up to date and competitive.</p>
+				<p>This is a personal project, please <a href="https://www.paypal.me/LevD">support me by donating</a> so I can keep Minimalist for Google Calendar up to date and competitive.</p>
 				<br />
-				<a class="button" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4RVCM5TZRYBK8" target="_blank">Donate</a>
+				<a class="button" href="https://www.paypal.me/LevD" target="_blank">Donate</a>
 			</div>
 		</section>
 	</div>
